added group project link

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/PennyLIU2022/first-day-repo" target="_blank" class="Project Repository">
+                <a href="https://github.com/PhilipVKurian/weather-prepared" target="_blank" class="Project Repository">
                     <div class="ProjectLabel">
-                        <h4>Repository</h4>
-                        <p>Github</p>
+                        <h4>Group Project</h4>
+                        <p>Weather Prepared</p>
                     </div>
                     
                 </a>
