to add group project

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/PennyLIU2022/prework-study-guide" target="_blank" class="Project Guide">
+                <a href="https://github.com/kanhairaval/latte-larry-s-spite-coffee" target="_blank" class="Project Guide">
                     <div class="ProjectLabel">
-                        <h4>Study Guide</h4>
-                        <p>Advanced CSS</p>
+                        <h4>Group Project</h4>
+                        <p>Larry's Coffee Shop</p>
                     </div>
                 </a>
 
